@@ -26,19 +26,18 @@ import com.android.tradefed.device.DeviceNotAvailableException;
 import com.android.tradefed.device.ITestDevice;
 import com.android.tradefed.device.TopHelper;
 import com.android.tradefed.log.LogUtil.CLog;
+import com.android.tradefed.result.FileInputStreamSource;
 import com.android.tradefed.result.ITestInvocationListener;
 import com.android.tradefed.result.InputStreamSource;
 import com.android.tradefed.result.LogDataType;
-import com.android.tradefed.result.SnapshotInputStreamSource;
 import com.android.tradefed.testtype.IDeviceTest;
 import com.android.tradefed.testtype.IRemoteTest;
 import com.android.tradefed.util.FileUtil;
+import com.android.tradefed.util.StreamUtil;
 
-import junit.framework.Assert;
+import org.junit.Assert;
 
 import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -79,11 +78,12 @@ public class EncryptionCpuTest implements IDeviceTest, IRemoteTest {
         private CpuStatsCollector mCpuStatsCollector = null;
         private File mLogFile = null;
 
-        private Map<String, String> mMetrics = new HashMap<String, String>();
+        private Map<String, String> mMetrics = new HashMap<>();
 
         /**
          * Run the test.
          *
+         * @param listener an {@link ITestInvocationListener} where to report results
          * @throws DeviceNotAvailableException If the device is not available.
          */
         public void run(ITestInvocationListener listener) throws DeviceNotAvailableException {
@@ -210,13 +210,12 @@ public class EncryptionCpuTest implements IDeviceTest, IRemoteTest {
                 mTopHelper.cancel();
             }
             if (mLogFile != null) {
+                InputStreamSource source = new FileInputStreamSource(mLogFile, true /* delete */);
                 try {
-                    listener.testLog(String.format("stats_%s", mKey), LogDataType.TEXT,
-                            new SnapshotInputStreamSource(new FileInputStream(mLogFile)));
-                } catch (FileNotFoundException e) {
-                    CLog.e("Error saving log file: %s", e.getMessage());
+                    listener.testLog(String.format("stats_%s", mKey), LogDataType.TEXT, source);
+                } finally {
+                    StreamUtil.cancel(source);
                 }
-                mLogFile.delete();
                 mLogFile = null;
             }
             InputStreamSource bugreport = mTestDevice.getBugreport();
@@ -250,9 +249,7 @@ public class EncryptionCpuTest implements IDeviceTest, IRemoteTest {
                 createFileHost(hostFile.getAbsolutePath(), mPushFileSize);
             } catch (IOException e) {
                 CLog.e("Error creating file on host, skipping test.");
-                if (hostFile != null) {
-                    hostFile.delete();
-                }
+                FileUtil.deleteFile(hostFile);
                 return;
             }
 
@@ -266,11 +263,12 @@ public class EncryptionCpuTest implements IDeviceTest, IRemoteTest {
 
                 CLog.d("Pushing %dkB file to device %s took %d ms", mPushFileSize,
                         mTestDevice.getSerialNumber(), elapsedTime);
-                addMetric("push_bw" + getKeySuffix(),
-                        new Double(1000.0 * mPushFileSize / elapsedTime).toString());
+                addMetric(
+                        "push_bw" + getKeySuffix(),
+                        Double.valueOf(1000.0 * mPushFileSize / elapsedTime).toString());
             } finally {
                 stopLogging(listener);
-                hostFile.delete();
+                FileUtil.deleteFile(hostFile);
                 mTestDevice.executeShellCommand(String.format("rm %s", mDeviceFilePath));
             }
         }
@@ -308,13 +306,12 @@ public class EncryptionCpuTest implements IDeviceTest, IRemoteTest {
 
                 CLog.d("pulling %dkB file from device %s took %d ms", mPullFileSize,
                         mTestDevice.getSerialNumber(), elapsedTime);
-                addMetric("pull_bw" + getKeySuffix(),
-                        new Double(1000.0 * mPullFileSize / elapsedTime).toString());
+                addMetric(
+                        "pull_bw" + getKeySuffix(),
+                        Double.valueOf(1000.0 * mPullFileSize / elapsedTime).toString());
             } finally {
                 stopLogging(listener);
-                if (hostFile != null) {
-                    hostFile.delete();
-                }
+                FileUtil.deleteFile(hostFile);
                 mTestDevice.executeShellCommand(String.format("rm %s", mDeviceFilePath));
             }
         }
@@ -423,7 +420,7 @@ public class EncryptionCpuTest implements IDeviceTest, IRemoteTest {
         }
 
         // Allocate enough space for all AbstractEncryptionCpuTest instances below
-        mTestCases = new ArrayList<CpuTest>(4);
+        mTestCases = new ArrayList<>(4);
         CpuTest test;
 
         if (mRunPush) {
