@@ -20,17 +20,20 @@ import com.android.tradefed.command.FatalHostError;
 import com.android.tradefed.log.LogUtil.CLog;
 import com.android.tradefed.util.FileUtil;
 
+import com.google.common.annotations.VisibleForTesting;
+
 import java.io.File;
 import java.io.IOException;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Stack;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.ReentrantLock;
 
 /**
@@ -56,6 +59,9 @@ public class FileDownloadCache {
     /** the lock for <var>mCacheMap</var> */
     private final ReentrantLock mCacheMapLock = new ReentrantLock();
 
+    /** A map of remote file paths to locks. */
+    private final Map<String, ReentrantLock> mFileLocks = new HashMap<String, ReentrantLock>();
+
     private long mCurrentCacheSize = 0;
 
     /** The approximate maximum allowed size of the local file cache. Default to 20 gig */
@@ -80,7 +86,7 @@ public class FileDownloadCache {
     private static class FileTimeComparator implements Comparator<FilePair> {
         @Override
         public int compare(FilePair o1, FilePair o2) {
-            Long timestamp1 = new Long(o1.mFile.lastModified());
+            Long timestamp1 = Long.valueOf(o1.mFile.lastModified());
             Long timestamp2 = o2.mFile.lastModified();
             return timestamp1.compareTo(timestamp2);
         }
@@ -161,11 +167,59 @@ public class FileDownloadCache {
         }
     }
 
+    /** Acquires the lock for a file. */
+    protected void lockFile(String remoteFilePath) {
+        ReentrantLock fileLock;
+
+        synchronized (mFileLocks) {
+            fileLock = mFileLocks.get(remoteFilePath);
+            if (fileLock == null) {
+                fileLock = new ReentrantLock();
+                mFileLocks.put(remoteFilePath, fileLock);
+            }
+        }
+        fileLock.lock();
+    }
+
+    /**
+     * Acquire the lock for a file only if it is not held by another thread.
+     *
+     * @return true if the lock was acquired, and false otherwise.
+     */
+    protected boolean tryLockFile(String remoteFilePath) {
+        synchronized (mFileLocks) {
+            ReentrantLock fileLock = mFileLocks.get(remoteFilePath);
+            if (fileLock == null) {
+                fileLock = new ReentrantLock();
+                mFileLocks.put(remoteFilePath, fileLock);
+            }
+            try {
+                return fileLock.tryLock(0, TimeUnit.SECONDS);
+            } catch (InterruptedException e) {
+                return false;
+            }
+        }
+    }
+
+    /** Attempt to release a lock for a file. */
+    protected void unlockFile(String remoteFilePath) {
+        synchronized (mFileLocks) {
+            ReentrantLock fileLock = mFileLocks.get(remoteFilePath);
+            if (fileLock != null) {
+                if (!fileLock.hasQueuedThreads()) {
+                    mFileLocks.remove(remoteFilePath);
+                }
+                fileLock.unlock();
+            }
+        }
+    }
+
     /**
      * Set the maximum size of the local file cache.
-     * <p/>
-     * Cache will not be adjusted immediately if set to a smaller size than current, but will
+     *
+     * <p>Cache will not be adjusted immediately if set to a smaller size than current, but will
      * take effect on next file download.
+     *
      * @param numBytes
      */
     public void setMaxCacheSize(long numBytes) {
@@ -189,64 +243,60 @@ public class FileDownloadCache {
     public File fetchRemoteFile(IFileDownloader downloader, String remotePath)
             throws BuildRetrievalError {
         boolean download = false;
-        // remove and then add previous cache entry to maintain LRU order
-        mCacheMapLock.lock();
-        File copyFile = null;
+        File cachedFile, copyFile;
+
+        lockFile(remotePath);
         try {
-            File cachedFile = mCacheMap.remove(remotePath);
-            if (cachedFile == null) {
-                // create a local File that maps to remotePath
-                // convert remotePath to a local path if necessary
-                String localRelativePath = convertPath(remotePath);
-                cachedFile = new File(mCacheRoot, localRelativePath);
-                cachedFile.getParentFile().mkdirs();
-                download = true;
-            }
-            // lock on the file, so no other thread attempts to delete it or access it before its
-            // downloaded
+            mCacheMapLock.lock();
             try {
-                synchronized (cachedFile) {
-                    mCacheMap.put(remotePath, cachedFile);
-                    mCacheMapLock.unlock();
-                    if (download) {
-                        downloadFile(downloader, remotePath, cachedFile);
-                    } else {
-                        Log.d(LOG_TAG, String.format("Retrieved remote file %s from cached file %s",
-                                remotePath, cachedFile.getAbsolutePath()));
-                    }
-                    copyFile = copyFile(remotePath, cachedFile);
+                cachedFile = mCacheMap.remove(remotePath);
+                if (cachedFile == null) {
+                    download = true;
+                    String localRelativePath = convertPath(remotePath);
+                    cachedFile = new File(mCacheRoot, localRelativePath);
                 }
-            } catch (BuildRetrievalError e) {
-                // remove entry from cache outside of cachedFile lock, to prevent deadlock
-                mCacheMapLock.lock();
-                mCacheMap.remove(remotePath);
+                mCacheMap.put(remotePath, cachedFile);
+            } finally {
                 mCacheMapLock.unlock();
+            }
+
+            try {
+                if (download || !cachedFile.exists()) {
+                    cachedFile.getParentFile().mkdirs();
+                    downloadFile(downloader, remotePath, cachedFile);
+                } else {
+                    Log.d(
+                            LOG_TAG,
+                            String.format(
+                                    "Retrieved remote file %s from cached file %s",
+                                    remotePath, cachedFile.getAbsolutePath()));
+                }
+                copyFile = copyFile(remotePath, cachedFile);
+            } catch (BuildRetrievalError | RuntimeException e) {
+                // cached file is likely incomplete, delete it.
+                deleteCacheEntry(remotePath);
                 throw e;
             }
+
+            // Only the thread that first downloads the file should increment the cache.
             if (download) {
                incrementAndAdjustCache(cachedFile.length());
             }
         } finally {
-            if (mCacheMapLock.isHeldByCurrentThread() && mCacheMapLock.isLocked()) {
-                mCacheMapLock.unlock();
-            }
+            unlockFile(remotePath);
         }
         return copyFile;
     }
 
+    /** Do the actual file download, clean up on exception is done by the caller. */
     private void downloadFile(IFileDownloader downloader, String remotePath, File cachedFile)
             throws BuildRetrievalError {
-        try {
-            Log.d(LOG_TAG, String.format("Downloading %s to cache", remotePath));
-            downloader.downloadFile(remotePath, cachedFile);
-        } catch (BuildRetrievalError e) {
-            // cached file is likely incomplete, delete it
-            cachedFile.delete();
-            throw e;
-        }
+        Log.d(LOG_TAG, String.format("Downloading %s to cache", remotePath));
+        downloader.downloadFile(remotePath, cachedFile);
     }
 
-    private File copyFile(String remotePath, File cachedFile) throws BuildRetrievalError {
+    @VisibleForTesting
+    File copyFile(String remotePath, File cachedFile) throws BuildRetrievalError {
         // attempt to create a local copy of cached file with sane name
         File hardlinkFile = null;
         try {
@@ -257,11 +307,9 @@ public class FileDownloadCache {
             FileUtil.hardlinkFile(cachedFile, hardlinkFile);
             return hardlinkFile;
         } catch (IOException e) {
-            if (hardlinkFile != null) {
-                hardlinkFile.delete();
-            }
+            FileUtil.deleteFile(hardlinkFile);
             // cached file might be corrupt or incomplete, delete it
-            cachedFile.delete();
+            FileUtil.deleteFile(cachedFile);
             throw new BuildRetrievalError(String.format("Failed to copy cached file %s",
                     cachedFile), e);
         }
@@ -288,18 +336,24 @@ public class FileDownloadCache {
         mCacheMapLock.lock();
         try {
             mCurrentCacheSize += length;
-            Iterator<Map.Entry<String, File>> mapIterator = mCacheMap.entrySet().iterator();
-            // map cannot be modified while iterating, so store entries to be deleted in another list
-            Collection<String> keysToDelete = new LinkedList<String>();
-            while (mCurrentCacheSize > getMaxFileCacheSize() && mapIterator.hasNext()) {
-                Map.Entry<String, File> currentEntry = mapIterator.next();
-                keysToDelete.add(currentEntry.getKey());
-                mCurrentCacheSize -= currentEntry.getValue().length();
-            }
-            for (String deleteKey : keysToDelete) {
-                File deleteFile = mCacheMap.remove(deleteKey);
-                synchronized (deleteFile) {
-                    deleteFile.delete();
+            Iterator<String> keyIterator = mCacheMap.keySet().iterator();
+            while (mCurrentCacheSize > getMaxFileCacheSize() && keyIterator.hasNext()) {
+                String remotePath = keyIterator.next();
+                // Only delete the file if it is not being used by another thread.
+                if (tryLockFile(remotePath)) {
+                    try {
+                        File file = mCacheMap.get(remotePath);
+                        mCurrentCacheSize -= file.length();
+                        file.delete();
+                        keyIterator.remove();
+                    } finally {
+                        unlockFile(remotePath);
+                    }
+                } else {
+                    CLog.i(
+                            String.format(
+                                    "File %s is being used by another invocation. Skipping.",
+                                    remotePath));
                 }
             }
             // audit cache size
@@ -307,6 +361,10 @@ public class FileDownloadCache {
                 // should never happen
                 Log.e(LOG_TAG, "Cache size is less than 0!");
                 // TODO: throw fatal error?
+            } else if (mCurrentCacheSize > getMaxFileCacheSize()) {
+                // May occur if the cache is configured to be too small or if mCurrentCacheSize is
+                // accounting for non-existent files.
+                Log.w(LOG_TAG, "File cache is over-capacity.");
             }
         } finally {
             mCacheMapLock.unlock();
@@ -372,5 +430,27 @@ public class FileDownloadCache {
      */
     long getMaxFileCacheSize() {
         return mMaxFileCacheSize;
+    }
+
+    /**
+     * Allow deleting an entry from the cache. In case the entry is invalid or corrupted.
+     */
+    public void deleteCacheEntry(String remoteFilePath) {
+        lockFile(remoteFilePath);
+        try {
+            mCacheMapLock.lock();
+            try {
+                File file = mCacheMap.remove(remoteFilePath);
+                if (file != null) {
+                    FileUtil.recursiveDelete(file);
+                } else {
+                    CLog.i("No cache entry to delete for %s", remoteFilePath);
+                }
+            } finally {
+                mCacheMapLock.unlock();
+            }
+        } finally {
+            unlockFile(remoteFilePath);
+        }
     }
 }
